--- a/config/config.json
+++ b/config/config.json
@@ -2,12 +2,12 @@
   "workingDirectory": "./work",
   "applications": [
     {
-      "name": "NugetProjekt",
+      "name": "NugetDemo",
       "gitUrl": "https://github.com/jvangemmeren-jpg/license-diff.git",
       "fromCommit": "1fb5abe5be049fb36596d5e5eaeddd4371861b31",
       "toCommit":   "da95fa0be21baa0a354b0bd9943f1fab72fe20e0",
       "csprojPaths": [
-        "src/NugetDemo/.sln/src/NugetProjekt/NugetProjekt.csproj"
+        "src/NugetDemo/NugetDemo/NugetDemo.csproj"
       ],
       "npmProjectDirs": [],
       "excludes": {
@@ -19,15 +19,15 @@
       }
     },
     {
-      "name": "NpmProjekt",
+      "name": "NpmDemo",
       "gitUrl": "https://github.com/jvangemmeren-jpg/license-diff.git",
       "fromCommit": "1fb5abe5be049fb36596d5e5eaeddd4371861b31",
       "toCommit":   "da95fa0be21baa0a354b0bd9943f1fab72fe20e0",
       "csprojPaths": [
-        "src/NpmDemo/.sln/src/NpmProjekt/NpmProjekt.csproj"
+        "src/NpmDemo/NpmDemo/NpmDemo.csproj"
       ],
       "npmProjectDirs": [
-        "src/NpmDemo/.sln/src/NpmProjektFrontend"
+        ""
       ],
       "excludes": {
         "nuget": [],
