--- a/src/NpmDemo/NpmDemo/NpmDemo.csproj
+++ b/src/NpmDemo/NpmDemo/NpmDemo.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.23" />
+  </ItemGroup>
+
 </Project>
