--- a/src/NpmDemo/NpmDemo/NpmDemo.csproj
+++ b/src/NpmDemo/NpmDemo/NpmDemo.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.23" />
+    <PackageReference Include="Npm" Version="3.5.2" />
   </ItemGroup>
 
 </Project>
