--- a/src/NugetDemo/NugetDemo/NugetDemo.csproj
+++ b/src/NugetDemo/NugetDemo/NugetDemo.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.0" />
   </ItemGroup>
 
