--- a/src/NugetDemo/NugetDemo/NugetDemo.csproj
+++ b/src/NugetDemo/NugetDemo/NugetDemo.csproj
@@ -9,7 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.0" />
+    <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
 
 </Project>
