--- a/src/NpmDemo/NpmDemo/NpmDemo.csproj
+++ b/src/NpmDemo/NpmDemo/NpmDemo.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.104.1" />
+    <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.23" />
-    <PackageReference Include="Npm" Version="3.5.2" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="10.0.2" />
   </ItemGroup>
 
 </Project>
